# yt-pl-ctr

./: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: sync_candace_owens.yml  sync_neutrality_studies.yml  sync_playlists.yml
configs/: channels.yaml  jre.yaml
docs/: playbook-candace-owens.md  playbook-jre.md  playbook-neutrality-studies.md
models/candace_owens/: label_encoder.pkl  pipeline.pkl  training_report.json
models/joe_rogan_experience/: label_encoder.pkl  training_report.json
models/neutrality_studies/: label_encoder.pkl  training_report.json
models/the_new_atlas/: label_encoder.pkl  pipeline.pkl  training_report.json
scripts/: backfill.py  backfill.sh  build_features.py  cache.py  check_bertopic_imports.py  classify_corpus.py  cleanup_duplicate_playlists.py  discover_topics.py  discover_topics_bertopic.py  download_test_data.py  enrich_metadata.py  explore_bot_detection.py  fetch_playlist_membership.py  fetch_transcripts.py  fetch_wikipedia.py  get_refresh_token.py  label_corpus.py  llm_label.py  migrate_labels.py  pipeline.py  search_mentions.py  test_public_vs_private.py  test_quota.py  test_yt_dlp_upgrade.py  train_classifier.py  whoami_youtube.py
src/: __init__.py
src/yt_pl_ctr/: __init__.py  classification_state.py  classifier.py  cli.py  config.py  fetcher.py  fetcher_queue.py  models.py  processor.py  queue.py  sync.py  wikipedia.py  youtube.py
tests/: test_classifier_accuracy.py
